fukin fix the scrollbar will u?

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -54,9 +54,6 @@ a {
             // overflow: hidden;
         }
     }
-    & .home-cneter:after {
-        min-height: calc(100% + 1px);
-    }
     & .home-footer {
         height: 70px;
         background: rgb(175,58,49);
