--- a/src/assets/scss/three.scss
+++ b/src/assets/scss/three.scss
@@ -1,5 +1,5 @@
 .three {
-    height: auto;
+    min-height: calc(100% + 1px);
     background: #fff;
     ul {
         margin-top: 56px;
